Add Stop Forum Spam check

--- a/pcgf/ajaxregistrationcheck/config/services.yml
+++ b/pcgf/ajaxregistrationcheck/config/services.yml
@@ -14,3 +14,5 @@ services:
             - '@request'
             - '@dbal.conn'
             - '@user'
+            - '@dispatcher'
+            - '@?rmcgirr83.stopforumspam.mainlistener'
